# chess

./: CMakeLists.txt  Chess.pro  ChessNotes.txt  chessboard.cpp  chessboard.h  main.cpp  tests.cpp
